--- a/package.json
+++ b/package.json
@@ -8,8 +8,11 @@
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.14.19",
     "@mui/material": "^5.14.20",
+    "i18next": "^25.8.7",
+    "i18next-browser-languagedetector": "^8.2.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-i18next": "^16.5.4",
     "react-router-dom": "^6.20.1",
     "react-scripts": "5.0.1"
   },
@@ -37,7 +40,3 @@
     ]
   }
 }
-
-
-
-
